[gd_scene load_steps=11 format=3 uid="uid://wi8dav4pmdbk"]

[ext_resource type="Script" path="res://Scripts/Character_chart.gd" id="1_22s7b"]
[ext_resource type="Texture2D" uid="uid://diji1mhc4g831" path="res://Assets/UI/CharacterSheetBackground.png" id="2_d2ir1"]
[ext_resource type="Texture2D" uid="uid://7wg58vccjad0" path="res://Assets/Portraits/Monsters/skeleton.png" id="3_ny7xt"]
[ext_resource type="Texture2D" uid="uid://di21l0gjp24lh" path="res://Assets/UI/PortraitBorder.png" id="4_pa4mw"]
[ext_resource type="FontFile" uid="uid://bixdt13cdgeub" path="res://Assets/Fonts/Cormorant-Bold.ttf" id="5_mk2nt"]
[ext_resource type="Texture2D" uid="uid://cmfoo70pdp3dj" path="res://Assets/UI/Icons/health.png" id="6_runu1"]
[ext_resource type="Texture2D" uid="uid://yb7541cqmlfb" path="res://Assets/UI/Icons/damage.png" id="7_uw35m"]
[ext_resource type="Texture2D" uid="uid://bcfs70vrf7bj4" path="res://Assets/UI/Icons/speed.png" id="8_m0h33"]
[ext_resource type="Texture2D" uid="uid://cxb4bf0fh0bji" path="res://Assets/UI/Healthbar_texture.png" id="9_ck6gn"]
[ext_resource type="Texture2D" uid="uid://rj38roik2pp" path="res://Assets/UI/Healthbar_progress_texture.png" id="10_33ffo"]

[node name="CharacterSheet" type="Control"]
z_as_relative = false
layout_mode = 3
anchor_left = 0.413
anchor_top = 0.355
anchor_right = 0.587
anchor_bottom = 0.63
offset_left = 0.223999
offset_top = -0.0399933
offset_right = -0.223999
offset_bottom = -0.240021
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(102, 94)
size_flags_horizontal = 4
mouse_filter = 2
script = ExtResource("1_22s7b")

[node name="Card Background" type="NinePatchRect" parent="."]
texture_filter = 1
custom_minimum_size = Vector2(100, 160)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_d2ir1")
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="MarginContainer" type="MarginContainer" parent="Card Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="Card Background/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Card Background/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Portrait Margin" type="MarginContainer" parent="Card Background/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Portrait" type="Control" parent="Card Background/MarginContainer/VBoxContainer/HBoxContainer/Portrait Margin"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Portrait" type="TextureRect" parent="Card Background/MarginContainer/VBoxContainer/HBoxContainer/Portrait Margin/Portrait"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 80)
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_ny7xt")
expand_mode = 2

[node name="Portrait Border" type="NinePatchRect" parent="Card Background/MarginContainer/VBoxContainer/HBoxContainer/Portrait Margin/Portrait/Portrait"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_pa4mw")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="Stats Margin" type="MarginContainer" parent="Card Background/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="Card Background/MarginContainer/VBoxContainer/HBoxContainer/Stats Margin"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/margin_left = 4
theme_override_constants/margin_right = 4

[node name="Left" type="VBoxContainer" parent="Card Background/MarginContainer/VBoxContainer/HBoxContainer/Stats Margin/MarginContainer"]
layout_mode = 2

[node name="Health" type="HBoxContainer" parent="Card Background/MarginContainer/VBoxContainer/HBoxContainer/Stats Margin/MarginContainer/Left"]
layout_mode = 2

[node name="ColorRect" type="TextureRect" parent="Card Background/MarginContainer/VBoxContainer/HBoxContainer/Stats Margin/MarginContainer/Left/Health"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("6_runu1")

[node name="HealthLabel" type="Label" parent="Card Background/MarginContainer/VBoxContainer/HBoxContainer/Stats Margin/MarginContainer/Left/Health"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5_mk2nt")
theme_override_font_sizes/font_size = 20
text = "???
"

[node name="Damage" type="HBoxContainer" parent="Card Background/MarginContainer/VBoxContainer/HBoxContainer/Stats Margin/MarginContainer/Left"]
layout_mode = 2

[node name="ColorRect" type="TextureRect" parent="Card Background/MarginContainer/VBoxContainer/HBoxContainer/Stats Margin/MarginContainer/Left/Damage"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("7_uw35m")

[node name="DamageLabel" type="Label" parent="Card Background/MarginContainer/VBoxContainer/HBoxContainer/Stats Margin/MarginContainer/Left/Damage"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5_mk2nt")
theme_override_font_sizes/font_size = 20
text = "???
"

[node name="Movespeed" type="HBoxContainer" parent="Card Background/MarginContainer/VBoxContainer/HBoxContainer/Stats Margin/MarginContainer/Left"]
layout_mode = 2

[node name="ColorRect" type="TextureRect" parent="Card Background/MarginContainer/VBoxContainer/HBoxContainer/Stats Margin/MarginContainer/Left/Movespeed"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("8_m0h33")

[node name="MovespeedLabel" type="Label" parent="Card Background/MarginContainer/VBoxContainer/HBoxContainer/Stats Margin/MarginContainer/Left/Movespeed"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5_mk2nt")
theme_override_font_sizes/font_size = 20
text = "???
"

[node name="ResourceBars" type="MarginContainer" parent="Card Background/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Card Background/MarginContainer/VBoxContainer/ResourceBars"]
layout_mode = 2

[node name="Label" type="Label" parent="Card Background/MarginContainer/VBoxContainer/ResourceBars/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_mk2nt")
text = "XP
"
horizontal_alignment = 1

[node name="XpBar" type="TextureProgressBar" parent="Card Background/MarginContainer/VBoxContainer/ResourceBars/VBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
nine_patch_stretch = true
stretch_margin_left = 4
stretch_margin_top = 4
stretch_margin_right = 4
stretch_margin_bottom = 4
texture_under = ExtResource("9_ck6gn")
texture_progress = ExtResource("10_33ffo")
